--- a/INSTAL·LACIO I CONFIGURACIÓ/INSTAL·LACIÓ DOCKER/docker-compose.yml
+++ b/INSTAL·LACIO I CONFIGURACIÓ/INSTAL·LACIÓ DOCKER/docker-compose.yml
@@ -4,17 +4,58 @@ services:
     image: postgres:latest
     restart: always
     environment:
-      DATABASE_HOST: 192.168.1.200
-      POSTGRES_DB: global
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: P@ssw0rd
+      POSTGRES_DB: root
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
     ports:
       - "5432:5432"
+    networks:
+      - my-network
+
+  cassandra-db:
+    image: cassandra:latest
+    restart: always
+    ports:
+      - "9042:9042"
+    networks:
+      - my-network
+
+
 networks:
   my-network:
     ipam:
       config:
         - subnet: 172.24.0.0/16
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     
